# thats-a-stack

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  zellij.kdl
.sqlx/: query-38eaa13ff524f5844feb9102507d23543a132188526eba8070bf1eb93b3c397c.json  query-41c000bef37864adafa7ddc2b78c2b2bdc0600ca5fab23eb728e772c093e0df4.json  query-75363bf71b81d4d333616c84fe79651d95035e51dac11fe4e7afe1e3cfa9b0e2.json  query-afd5008beb5d39d29521dc8d16c58463cde45882fd7d32941804221e96591247.json  query-b7e320a072be2c0a03605db98718877a1975df3f196e83bbb0d0aafb824e275b.json  query-cc53060ef684626c2892ca4c5191e920fd6d6faa91386d5d3b1fed97cee2a99e.json
assets/: main.css
migrations/: 20240517102041_Add_count.sql
src/: app_state.rs  assets.rs  domain.rs  main.rs
src/ui/: counter.rs  mod.rs
tailwind/: package-lock.json  package.json
templates/: base.html  index.html  page.html
